# texstudio

./: .gitignore  CMakeLists.txt
cmake/: FindPoppler.cmake  project_install.cmake  win.rc.in
src/: CMakeLists.txt
src/adwaita-qt/: CMakeLists.txt
src/debug/: CMakeLists.txt
src/hunspell/: CMakeLists.txt
src/pdfviewer/: CMakeLists.txt
src/qcodeedit/: CMakeLists.txt
src/quazip/: CMakeLists.txt
src/tests/: CMakeLists.txt
